Fixed range gap

--- a/src/css/layouts/roomFilter.css
+++ b/src/css/layouts/roomFilter.css
@@ -30,16 +30,26 @@
   text-transform: capitalize;
   border-radius: 4px;
 }
+
 select {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  /* Some browsers will not display the caret when using calc, so we put the fallback first */ 
-  background: url("http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png") white no-repeat 98.5% !important; /* !important used for overriding all other customisations */
-  background: url("http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png") white no-repeat calc(100% - 10px) !important; /* Better placement regardless of input width */
+  /* Some browsers will not display the caret when using calc, so we put the fallback first */
+  background: url("http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png") white no-repeat 98.5% !important;
+  /* !important used for overriding all other customisations */
+  background: url("http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png") white no-repeat calc(100% - 10px) !important;
+  /* Better placement regardless of input width */
 }
+
 /*For IE*/
-select::-ms-expand { display: none; }
+select::-ms-expand {
+  display: none;
+}
+
+input#price {
+  padding: 0.5rem 0;
+}
 
 .size-inputs {
   display: flex;
